trunk/Archive/70b3808bcbac165aabd1f3feea41c1db-4f34a5fd633ef9f45cb08f8e23efae0a/output
+ g++ -O2 -Wall -pedantic -pthread -std=c++11 main.cpp
main.cpp: In function ‘int main()’:
main.cpp:5:28: error: conversion from ‘const char [6]’ to non-scalar type ‘std::stringstream {aka std::basic_stringstream<char>}’ requested
     std::stringstream ss = "HELLO";
                            ^
